checking whether site is working

--- a/sky.html
+++ b/sky.html
@@ -6,6 +6,9 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
+    <div>
+        <p>Hello, I am here!</p>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/velocity.min.js"></script>
     </body>
