--- a/sky.html
+++ b/sky.html
@@ -5,7 +5,9 @@
         <title>Sky Cinema</title>
         <link href="css/style.css" rel="stylesheet">
     </head>
-    <body>
+    <body class="vsc-initialized">
+        <div id="container" style="perspective-origin: 206px 316.35px; perspective: 50px; opacity: 0.55; transform: rotateZ(0deg);">
+        </div>
     <div>
         <p>Hello, I am here!</p>
     </div>
