--- a/sky.html
+++ b/sky.html
@@ -12,6 +12,7 @@
         <p>Hello, I am here!</p>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/velocity.min.js"></script>
+        <script src="//cdn.jsdelivr.net/npm/velocity-animate@2.0/velocity.min.js"></script>
+    <script> src="js/bg.js"</script>
     </body>
 </html>
