--- a/sky.html
+++ b/sky.html
@@ -6,13 +6,13 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body class="vsc-initialized">
-        <div id="container" style="perspective-origin: 206px 316.35px; perspective: 50px; opacity: 0.55; transform: rotateZ(0deg);">
+        <div id="container">
         </div>
     <div>
         <p>Hello, I am here!</p>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="//cdn.jsdelivr.net/npm/velocity-animate@2.0/velocity.min.js"></script>
+        <script src="js/velocity.min.js"></script>
     <script> src="js/bg.js"</script>
     </body>
 </html>
