--- a/sky.html
+++ b/sky.html
@@ -12,7 +12,7 @@
         <p>Hello, I am here!</p>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="js/velocity.min.js"></script>
-    <script> src="js/bg.js"</script>
+    <script src="js/velocity.min.js"></script>
+    <script src="js/bg.js"></script>
     </body>
 </html>
