added basic structure of the page

--- a/sky.html
+++ b/sky.html
@@ -4,12 +4,57 @@
         <meta charset="utf-8">
         <title>Sky Cinema</title>
         <link href="css/style.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Iceland" rel="stylesheet">
     </head>
-    <body class="vsc-initialized">
-        <div id="container">
+    <body>
+        <!--<div id="container">
+        </div>-->
+        <div class="wrapper">
+            <div class="wrapper-block">
+                <section class="promo">
+                        <a class="promo-link" href="#">
+                            <div class="circle">
+                                <div class="circle2">
+                                    <a class="promo-innerlink" href="#">
+                                        <h2>The future is now</h2>
+                                    </a>
+                                </div>
+                            </div>
+                        </a>
+                </section>
+                <section class="downloads">
+                    <div class="movies">
+                        <a href="#">
+                            <h2>Movies</h2>
+                        </a>
+                    </div>
+                </section>
+            </div>
+            <div class="wrapper-block">
+                <section class="instagram-movie-feed">
+                    <div>Insta feed to come</div>
+                </section>
+                <section class="main-wheel">
+                    <div class="circle-wheel">Enter the new reality</div>
+                </section>
+                <section class="images">
+                    <div class="image">Image
+                    </div>
+                    <div class="image">Image
+                    </div>
+                    <div class="image">Image
+                    </div>
+                </section>
+            </div>
+            <section class="message">
+                <h2>You are here for the new beginning...</h2>
+            </section>
         </div>
+
+<!--
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="js/velocity.min.js"></script>
-    <script src="js/bg.js"></script>
+        <script src="js/velocity.min.js"></script>
+        <script src="js/bg.js"></script>
+        -->
     </body>
 </html>
