Added the functionality of toggling a class on the circle

--- a/sky.html
+++ b/sky.html
@@ -15,9 +15,7 @@
                         <a class="promo-link" href="#">
                             <div class="circle">
                                 <div class="circle2">
-                                    <a class="promo-innerlink" href="#">
                                         <h2>The future is now</h2>
-                                    </a>
                                 </div>
                             </div>
                         </a>
@@ -35,7 +33,12 @@
                     <div>Insta feed to come</div>
                 </section>
                 <section class="main-wheel">
-                    <div class="circle-wheel">Enter the new reality</div>
+                    <div id="circle-large" onkeypress="lightenUpCircle()" class="circle-wheel">
+                        <div class="circle-wheel-inner">
+                            <h2>Enter the new reality</h2>
+                        </div>
+                    </div>
+
                 </section>
                 <section class="images">
                     <div class="image">Image
@@ -56,5 +59,6 @@
         <script src="js/velocity.min.js"></script>
         <script src="js/bg.js"></script>
         -->
+    <script src="js/keys.js"></script>
     </body>
 </html>
