--- a/sky.html
+++ b/sky.html
@@ -4,7 +4,9 @@
         <meta charset="utf-8">
         <title>Sky Cinema</title>
         <link href="css/style.css" rel="stylesheet">
+        <link rel="stylesheet" href="fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
         <link href="https://fonts.googleapis.com/css?family=Iceland" rel="stylesheet">
+
     </head>
     <body>
         <!--<div id="container">
@@ -12,7 +14,8 @@
         <div class="wrapper">
             <div class="wrapper-block">
                 <section class="promo">
-                        <a class="promo-link" href="#">
+                        <!--<a class="promo-link" href="#"></a>-->
+                            <a class="promo-link fancybox.iframe" id="inline" target="_blank" href="http://www.youtube.com/watch?v=JmDHIVKWw5o&feature=player_embedded&autoplay=1">
                             <div class="circle">
                                 <div class="circle2">
                                         <h2>The future is now</h2>
@@ -21,7 +24,7 @@
                         </a>
                 </section>
                 <section class="downloads">
-                    <div class="movies">
+                    <div id="movies-block" class="movies">
                         <a href="#">
                             <h2>Movies</h2>
                         </a>
@@ -33,7 +36,7 @@
                     <div>Insta feed to come</div>
                 </section>
                 <section class="main-wheel">
-                    <div id="circle-large" onkeypress="lightenUpCircle()" class="circle-wheel">
+                    <div id="circle-large" class="circle-wheel">
                         <div class="circle-wheel-inner">
                             <h2>Enter the new reality</h2>
                         </div>
@@ -41,11 +44,11 @@
 
                 </section>
                 <section class="images">
-                    <div class="image">Image
+                    <div id="image-1" class="image">Image
                     </div>
-                    <div class="image">Image
+                    <div id="image-2" class="image">Image
                     </div>
-                    <div class="image">Image
+                    <div id="image-3" class="image">Image
                     </div>
                 </section>
             </div>
@@ -57,8 +60,12 @@
 <!--
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="js/velocity.min.js"></script>
-        <script src="js/bg.js"></script>
+        <script src="js/jquery.fancybox.js"></script>
         -->
-    <script src="js/keys.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+        <script type="text/javascript" src="js/keys.js"></script>
+        <script type="text/javascript" src="fancybox/jquery.fancybox-1.3.4.pack.js"></script>
+        <script type="text/javascript" src="fancybox/jquery.fancybox.js"></script>
     </body>
 </html>
