--- a/sky.html
+++ b/sky.html
@@ -14,8 +14,10 @@
         <div class="wrapper">
             <div class="wrapper-block">
                 <section class="promo">
-                        <!--<a class="promo-link" href="#"></a>-->
+                        <!--<a class="promo-link" href="#"></a>
                             <a class="promo-link fancybox.iframe" id="inline" target="_blank" href="http://www.youtube.com/watch?v=JmDHIVKWw5o&feature=player_embedded&autoplay=1">
+                            -->
+                            <a class="promo-link fancybox.iframe" id="inline" target="_blank" href="https://www.youtube.com/embed/JmDHIVKWw5o&autoplay=1">
                             <div class="circle">
                                 <div class="circle2">
                                         <h2>The future is now</h2>
