--- a/sky.html
+++ b/sky.html
@@ -14,10 +14,8 @@
         <div class="wrapper">
             <div class="wrapper-block">
                 <section class="promo">
-                        <!--<a class="promo-link" href="#"></a>
+                        <!--<a class="promo-link" href="#"></a>-->
                             <a class="promo-link fancybox.iframe" id="inline" target="_blank" href="http://www.youtube.com/watch?v=JmDHIVKWw5o&feature=player_embedded&autoplay=1">
-                            -->
-                            <a class="promo-link fancybox.iframe" id="inline" target="_blank" href="https://www.youtube.com/embed/JmDHIVKWw5o&autoplay=1">
                             <div class="circle">
                                 <div class="circle2">
                                         <h2>The future is now</h2>
@@ -58,12 +56,7 @@
                 <h2>You are here for the new beginning...</h2>
             </section>
         </div>
-
-<!--
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script src="js/velocity.min.js"></script>
-        <script src="js/jquery.fancybox.js"></script>
-        -->
+        
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
         <script type="text/javascript" src="js/keys.js"></script>
