--- a/sky.html
+++ b/sky.html
@@ -44,19 +44,16 @@
 
                 </section>
                 <section class="images">
-                    <div id="image-1" class="image">Image
-                    </div>
-                    <div id="image-2" class="image">Image
-                    </div>
-                    <div id="image-3" class="image">Image
-                    </div>
+                    <div id="image-1" class="image image1"></div>
+                    <div id="image-2" class="image image2"></div>
+                    <div id="image-3" class="image image3"></div>
                 </section>
             </div>
             <section class="message">
                 <h2>You are here for the new beginning...</h2>
             </section>
         </div>
-        
+
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
         <script type="text/javascript" src="js/keys.js"></script>
